c/torch_api_generated.h

void atg_norm_out(tensor *, tensor result, tensor self, scalar p, int64_t dim, int keepdim);
void atg_normal(tensor *, tensor mean, double std);
void atg_normal1(tensor *, double mean, tensor std);
void atg_normal2(tensor *, tensor mean, tensor std);
void atg_normal_(tensor *, tensor self, double mean, double std);
void atg_normal_out(tensor *, tensor output, tensor mean, double std);
void atg_normal_out1(tensor *, tensor output, double mean, tensor std);
void atg_normal_out2(tensor *, tensor output, tensor mean, tensor std);
void atg_nuclear_norm(tensor *, tensor self, int keepdim);
void atg_nuclear_norm_out(tensor *, tensor result, tensor self, int keepdim);
void atg_ones(tensor *, int64_t *size_data, int size_len, int options_kind, int options_device);
void atg_ones_like(tensor *, tensor self);
void atg_ones_like1(tensor *, tensor self, int options_kind, int options_device);
void atg_ones_out(tensor *, tensor result, int64_t *size_data, int size_len);
void atg_orgqr(tensor *, tensor self, tensor input2);
void atg_orgqr_out(tensor *, tensor result, tensor self, tensor input2);
void atg_ormqr(tensor *, tensor self, tensor input2, tensor input3, int left, int transpose);
void atg_ormqr_out(tensor *, tensor result, tensor self, tensor input2, tensor input3, int left, int transpose);
void atg_pairwise_distance(tensor *, tensor x1, tensor x2, double p, double eps, int keepdim);
void atg_pdist(tensor *, tensor self, double p);
void atg_permute(tensor *, tensor self, int64_t *dims_data, int dims_len);
void atg_pin_memory(tensor *, tensor self);
void atg_pinverse(tensor *, tensor self, double rcond);
void atg_pixel_shuffle(tensor *, tensor self, int64_t upscale_factor);
void atg_poisson(tensor *, tensor self);
void atg_polygamma(tensor *, int64_t n, tensor self);
void atg_polygamma_(tensor *, tensor self, int64_t n);
void atg_polygamma_out(tensor *, tensor result, int64_t n, tensor self);
void atg_potri(tensor *, tensor self, int upper);
void atg_potri_out(tensor *, tensor result, tensor self, int upper);
void atg_potrs(tensor *, tensor self, tensor input2, int upper);
void atg_potrs_out(tensor *, tensor result, tensor self, tensor input2, int upper);
void atg_pow(tensor *, tensor self, scalar exponent);
void atg_pow1(tensor *, tensor self, tensor exponent);
void atg_pow2(tensor *, scalar self_scalar, tensor exponent);
void atg_pow_(tensor *, tensor self, scalar exponent);
void atg_pow_1(tensor *, tensor self, tensor exponent);
void atg_pow_out(tensor *, tensor result, tensor self, scalar exponent);
void atg_pow_out1(tensor *, tensor result, tensor self, tensor exponent);
void atg_pow_out2(tensor *, tensor result, scalar self_scalar, tensor exponent);
void atg_prelu(tensor *, tensor self, tensor weight);
void atg_prelu_backward(tensor *, tensor grad_output, tensor self, tensor weight);
void atg_prod(tensor *, tensor self);
void atg_prod1(tensor *, tensor self, int dtype);
void atg_prod2(tensor *, tensor self, int64_t dim, int keepdim);
void atg_prod3(tensor *, tensor self, int64_t dim, int dtype);
void atg_prod4(tensor *, tensor self, int64_t dim, int keepdim, int dtype);
void atg_prod_out(tensor *, tensor result, tensor self, int64_t dim, int keepdim);
void atg_prod_out1(tensor *, tensor result, tensor self, int64_t dim, int dtype);
void atg_prod_out2(tensor *, tensor result, tensor self, int64_t dim, int keepdim, int dtype);
void atg_pstrf(tensor *, tensor self, int upper);
void atg_pstrf_out(tensor *, tensor u, tensor piv, tensor self, int upper);
void atg_put_(tensor *, tensor self, tensor index, tensor source, int accumulate);
void atg_qr(tensor *, tensor self);
void atg_qr_out(tensor *, tensor Q, tensor R, tensor self);
void atg_rand(tensor *, int64_t *size_data, int size_len, int options_kind, int options_device);
void atg_rand_like(tensor *, tensor self);
void atg_rand_like1(tensor *, tensor self, int options_kind, int options_device);
void atg_rand_out(tensor *, tensor result, int64_t *size_data, int size_len);
void atg_randint(tensor *, int64_t high, int64_t *size_data, int size_len, int options_kind, int options_device);
void atg_randint1(tensor *, int64_t low, int64_t high, int64_t *size_data, int size_len, int options_kind, int options_device);
void atg_randint_like(tensor *, tensor self, int64_t high);
void atg_randint_like1(tensor *, tensor self, int64_t low, int64_t high);
void atg_randint_like2(tensor *, tensor self, int64_t high, int options_kind, int options_device);
void atg_randint_like3(tensor *, tensor self, int64_t low, int64_t high, int options_kind, int options_device);
void atg_randint_out(tensor *, tensor result, int64_t high, int64_t *size_data, int size_len);
void atg_randint_out1(tensor *, tensor result, int64_t low, int64_t high, int64_t *size_data, int size_len);
void atg_randn(tensor *, int64_t *size_data, int size_len, int options_kind, int options_device);
void atg_randn_like(tensor *, tensor self);
void atg_randn_like1(tensor *, tensor self, int options_kind, int options_device);
void atg_randn_out(tensor *, tensor result, int64_t *size_data, int size_len);
void atg_random_(tensor *, tensor self);
void atg_random_1(tensor *, tensor self, int64_t to);
void atg_random_2(tensor *, tensor self, int64_t from, int64_t to);
void atg_randperm(tensor *, int64_t n, int options_kind, int options_device);
void atg_randperm_out(tensor *, tensor result, int64_t n);
void atg_range(tensor *, scalar start, scalar end, int options_kind, int options_device);
void atg_range1(tensor *, scalar start, scalar end, scalar step, int options_kind, int options_device);
void atg_range_out(tensor *, tensor result, scalar start, scalar end);
void atg_range_out1(tensor *, tensor result, scalar start, scalar end, scalar step);
void atg_reciprocal(tensor *, tensor self);
void atg_reciprocal_(tensor *, tensor self);
void atg_reciprocal_out(tensor *, tensor result, tensor self);
void atg_reflection_pad1d(tensor *, tensor self, int64_t *padding_data, int padding_len);
void atg_reflection_pad1d_backward(tensor *, tensor grad_output, tensor self, int64_t *padding_data, int padding_len);
void atg_reflection_pad1d_backward_out(tensor *, tensor grad_input, tensor grad_output, tensor self, int64_t *padding_data, int padding_len);
void atg_reflection_pad1d_out(tensor *, tensor output, tensor self, int64_t *padding_data, int padding_len);
void atg_reflection_pad2d(tensor *, tensor self, int64_t *padding_data, int padding_len);
void atg_reflection_pad2d_backward(tensor *, tensor grad_output, tensor self, int64_t *padding_data, int padding_len);
void atg_reflection_pad2d_backward_out(tensor *, tensor grad_input, tensor grad_output, tensor self, int64_t *padding_data, int padding_len);
void atg_reflection_pad2d_out(tensor *, tensor output, tensor self, int64_t *padding_data, int padding_len);
void atg_relu(tensor *, tensor self);
void atg_relu_(tensor *, tensor self);
void atg_remainder(tensor *, tensor self, scalar other);
void atg_remainder1(tensor *, tensor self, tensor other);
void atg_remainder_(tensor *, tensor self, scalar other);
void atg_remainder_1(tensor *, tensor self, tensor other);
void atg_remainder_out(tensor *, tensor result, tensor self, scalar other);
void atg_remainder_out1(tensor *, tensor result, tensor self, tensor other);
void atg_renorm(tensor *, tensor self, scalar p, int64_t dim, scalar maxnorm);
void atg_renorm_(tensor *, tensor self, scalar p, int64_t dim, scalar maxnorm);
void atg_renorm_out(tensor *, tensor result, tensor self, scalar p, int64_t dim, scalar maxnorm);
void atg_repeat(tensor *, tensor self, int64_t *repeats_data, int repeats_len);
void atg_replication_pad1d(tensor *, tensor self, int64_t *padding_data, int padding_len);
void atg_replication_pad1d_backward(tensor *, tensor grad_output, tensor self, int64_t *padding_data, int padding_len);
void atg_replication_pad1d_backward_out(tensor *, tensor grad_input, tensor grad_output, tensor self, int64_t *padding_data, int padding_len);
void atg_replication_pad1d_out(tensor *, tensor output, tensor self, int64_t *padding_data, int padding_len);