torch-sys/src/c_generated.rs

    pub fn atg_norm_out(result_: *mut C_tensor, self_: *mut C_tensor, p_: *mut C_scalar, dim_: i64, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_normal(mean_: *mut C_tensor, std_: f64) -> *mut *mut C_tensor;
    pub fn atg_normal1(mean_: f64, std_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_normal2(mean_: *mut C_tensor, std_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_normal_(self_: *mut C_tensor, mean_: f64, std_: f64) -> *mut *mut C_tensor;
    pub fn atg_normal_out(output_: *mut C_tensor, mean_: *mut C_tensor, std_: f64) -> *mut *mut C_tensor;
    pub fn atg_normal_out1(output_: *mut C_tensor, mean_: f64, std_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_normal_out2(output_: *mut C_tensor, mean_: *mut C_tensor, std_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_nuclear_norm(self_: *mut C_tensor, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_nuclear_norm_out(result_: *mut C_tensor, self_: *mut C_tensor, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_ones(size_data: *const i64, size_len: c_int, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_ones_like(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_ones_like1(self_: *mut C_tensor, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_ones_out(result_: *mut C_tensor, size_data: *const i64, size_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_orgqr(self_: *mut C_tensor, input2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_orgqr_out(result_: *mut C_tensor, self_: *mut C_tensor, input2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_ormqr(self_: *mut C_tensor, input2_: *mut C_tensor, input3_: *mut C_tensor, left_: c_int, transpose_: c_int) -> *mut *mut C_tensor;
    pub fn atg_ormqr_out(result_: *mut C_tensor, self_: *mut C_tensor, input2_: *mut C_tensor, input3_: *mut C_tensor, left_: c_int, transpose_: c_int) -> *mut *mut C_tensor;
    pub fn atg_pairwise_distance(x1_: *mut C_tensor, x2_: *mut C_tensor, p_: f64, eps_: f64, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_pdist(self_: *mut C_tensor, p_: f64) -> *mut *mut C_tensor;
    pub fn atg_permute(self_: *mut C_tensor, dims_data: *const i64, dims_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_pin_memory(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_pinverse(self_: *mut C_tensor, rcond_: f64) -> *mut *mut C_tensor;
    pub fn atg_pixel_shuffle(self_: *mut C_tensor, upscale_factor_: i64) -> *mut *mut C_tensor;
    pub fn atg_poisson(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_polygamma(n_: i64, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_polygamma_(self_: *mut C_tensor, n_: i64) -> *mut *mut C_tensor;
    pub fn atg_polygamma_out(result_: *mut C_tensor, n_: i64, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_potri(self_: *mut C_tensor, upper_: c_int) -> *mut *mut C_tensor;
    pub fn atg_potri_out(result_: *mut C_tensor, self_: *mut C_tensor, upper_: c_int) -> *mut *mut C_tensor;
    pub fn atg_potrs(self_: *mut C_tensor, input2_: *mut C_tensor, upper_: c_int) -> *mut *mut C_tensor;
    pub fn atg_potrs_out(result_: *mut C_tensor, self_: *mut C_tensor, input2_: *mut C_tensor, upper_: c_int) -> *mut *mut C_tensor;
    pub fn atg_pow(self_: *mut C_tensor, exponent_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_pow1(self_: *mut C_tensor, exponent_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_pow2(self_scalar_: *mut C_scalar, exponent_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_pow_(self_: *mut C_tensor, exponent_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_pow_1(self_: *mut C_tensor, exponent_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_pow_out(result_: *mut C_tensor, self_: *mut C_tensor, exponent_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_pow_out1(result_: *mut C_tensor, self_: *mut C_tensor, exponent_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_pow_out2(result_: *mut C_tensor, self_scalar_: *mut C_scalar, exponent_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_prelu(self_: *mut C_tensor, weight_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_prelu_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor, weight_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_prod(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_prod1(self_: *mut C_tensor, dtype_: c_int) -> *mut *mut C_tensor;
    pub fn atg_prod2(self_: *mut C_tensor, dim_: i64, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_prod3(self_: *mut C_tensor, dim_: i64, dtype_: c_int) -> *mut *mut C_tensor;
    pub fn atg_prod4(self_: *mut C_tensor, dim_: i64, keepdim_: c_int, dtype_: c_int) -> *mut *mut C_tensor;
    pub fn atg_prod_out(result_: *mut C_tensor, self_: *mut C_tensor, dim_: i64, keepdim_: c_int) -> *mut *mut C_tensor;
    pub fn atg_prod_out1(result_: *mut C_tensor, self_: *mut C_tensor, dim_: i64, dtype_: c_int) -> *mut *mut C_tensor;
    pub fn atg_prod_out2(result_: *mut C_tensor, self_: *mut C_tensor, dim_: i64, keepdim_: c_int, dtype_: c_int) -> *mut *mut C_tensor;
    pub fn atg_pstrf(self_: *mut C_tensor, upper_: c_int) -> *mut *mut C_tensor;
    pub fn atg_pstrf_out(u_: *mut C_tensor, piv_: *mut C_tensor, self_: *mut C_tensor, upper_: c_int) -> *mut *mut C_tensor;
    pub fn atg_put_(self_: *mut C_tensor, index_: *mut C_tensor, source_: *mut C_tensor, accumulate_: c_int) -> *mut *mut C_tensor;
    pub fn atg_qr(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_qr_out(Q_: *mut C_tensor, R_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_rand(size_data: *const i64, size_len: c_int, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_rand_like(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_rand_like1(self_: *mut C_tensor, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_rand_out(result_: *mut C_tensor, size_data: *const i64, size_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_randint(high_: i64, size_data: *const i64, size_len: c_int, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_randint1(low_: i64, high_: i64, size_data: *const i64, size_len: c_int, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_randint_like(self_: *mut C_tensor, high_: i64) -> *mut *mut C_tensor;
    pub fn atg_randint_like1(self_: *mut C_tensor, low_: i64, high_: i64) -> *mut *mut C_tensor;
    pub fn atg_randint_like2(self_: *mut C_tensor, high_: i64, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_randint_like3(self_: *mut C_tensor, low_: i64, high_: i64, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_randint_out(result_: *mut C_tensor, high_: i64, size_data: *const i64, size_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_randint_out1(result_: *mut C_tensor, low_: i64, high_: i64, size_data: *const i64, size_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_randn(size_data: *const i64, size_len: c_int, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_randn_like(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_randn_like1(self_: *mut C_tensor, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_randn_out(result_: *mut C_tensor, size_data: *const i64, size_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_random_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_random_1(self_: *mut C_tensor, to_: i64) -> *mut *mut C_tensor;
    pub fn atg_random_2(self_: *mut C_tensor, from_: i64, to_: i64) -> *mut *mut C_tensor;
    pub fn atg_randperm(n_: i64, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_randperm_out(result_: *mut C_tensor, n_: i64) -> *mut *mut C_tensor;
    pub fn atg_range(start_: *mut C_scalar, end_: *mut C_scalar, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_range1(start_: *mut C_scalar, end_: *mut C_scalar, step_: *mut C_scalar, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_range_out(result_: *mut C_tensor, start_: *mut C_scalar, end_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_range_out1(result_: *mut C_tensor, start_: *mut C_scalar, end_: *mut C_scalar, step_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_reciprocal(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_reciprocal_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_reciprocal_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_reflection_pad1d(self_: *mut C_tensor, padding_data: *const i64, padding_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_reflection_pad1d_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor, padding_data: *const i64, padding_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_reflection_pad1d_backward_out(grad_input_: *mut C_tensor, grad_output_: *mut C_tensor, self_: *mut C_tensor, padding_data: *const i64, padding_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_reflection_pad1d_out(output_: *mut C_tensor, self_: *mut C_tensor, padding_data: *const i64, padding_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_reflection_pad2d(self_: *mut C_tensor, padding_data: *const i64, padding_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_reflection_pad2d_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor, padding_data: *const i64, padding_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_reflection_pad2d_backward_out(grad_input_: *mut C_tensor, grad_output_: *mut C_tensor, self_: *mut C_tensor, padding_data: *const i64, padding_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_reflection_pad2d_out(output_: *mut C_tensor, self_: *mut C_tensor, padding_data: *const i64, padding_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_relu(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_relu_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_remainder(self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_remainder1(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_remainder_(self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_remainder_1(self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_remainder_out(result_: *mut C_tensor, self_: *mut C_tensor, other_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_remainder_out1(result_: *mut C_tensor, self_: *mut C_tensor, other_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_renorm(self_: *mut C_tensor, p_: *mut C_scalar, dim_: i64, maxnorm_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_renorm_(self_: *mut C_tensor, p_: *mut C_scalar, dim_: i64, maxnorm_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_renorm_out(result_: *mut C_tensor, self_: *mut C_tensor, p_: *mut C_scalar, dim_: i64, maxnorm_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_repeat(self_: *mut C_tensor, repeats_data: *const i64, repeats_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_replication_pad1d(self_: *mut C_tensor, padding_data: *const i64, padding_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_replication_pad1d_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor, padding_data: *const i64, padding_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_replication_pad1d_backward_out(grad_input_: *mut C_tensor, grad_output_: *mut C_tensor, self_: *mut C_tensor, padding_data: *const i64, padding_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_replication_pad1d_out(output_: *mut C_tensor, self_: *mut C_tensor, padding_data: *const i64, padding_len: c_int) -> *mut *mut C_tensor;
